Improve stock data updates

--- a/components/shared/stock/stock.html
+++ b/components/shared/stock/stock.html
@@ -9,6 +9,6 @@
     {{stock.currentPrice}}
   </span>
   <span class="currentPricePct" [ngClass]="{ green: isGreen(), red: isRed() }">
-    {{stock.currentChangePct}}
+    {{stock.currentChangePct}}%
   </span>
 </div>
